Se agrego titulo a la pagina

--- a/UgU.html
+++ b/UgU.html
@@ -1,53 +1,55 @@
 <html>
-    <head>
-        <link href="CssuGu.css" rel="stylesheet" type="text/css">
-    </head>
 
-    <body>
-        <ul>
-            <li>
-                <a href = "#" > Home
-                </a>
-            </li>
-            <li>
-                <a href="#">Service
-                </a>
-            </li>
-            <li>
-                <a href="#">about
-                </a>
-            </li>
-            <li>
-                <a href="#">Cosas
-                </a>
-            </li>
-            <li>
-                <a href="#">Por que
-                </a>
-            </li>
-        </ul>
+<head>
+    <link href="CssuGu.css" rel="stylesheet" type="text/css">
+    <title>Portafolio</title>
+</head>
 
-      <div class="Information">
+<body>
+    <ul>
+        <li>
+            <a href="#"> Home
+            </a>
+        </li>
+        <li>
+            <a href="#">Service
+            </a>
+        </li>
+        <li>
+            <a href="#">about
+            </a>
+        </li>
+        <li>
+            <a href="#">Cosas
+            </a>
+        </li>
+        <li>
+            <a href="#">Por que
+            </a>
+        </li>
+    </ul>
 
-        
-
-
+    <div class="Information">
 
 
 
 
-      </div>
 
 
-    </body>
 
-    <div class="content">
+
+    </div>
+
+
+</body>
+
+<div class="content">
     <!--card-->
     <div class="card">
         <div class="icon"><i class="material-icons md36">
-            favorite_border</i></div>
-            <p class="title">Discord</p>
-            <p class="text">GumeR#34233</p>
+                favorite_border</i></div>
+        <p class="title">Discord</p>
+        <p class="text">GumeR#34233</p>
 
     </div>
     <!--end card-->
@@ -58,11 +60,11 @@
         <p class="title">Correo</p>
         <p class="text">mayorquin07@hotmail.es
 
-        </p> 
+        </p>
     </div>
     <!--end card-->
 
-    </div>
-   </div>
+</div>
+</div>
 
- </html>
+</html>
